# TVTestAndroid

./: .editorconfig  .gitignore  CLAUDE.md  MIGRATION_PLAN.md  README.md  SETUP_PROGRESS.md  STATUS_COMPLETE.md  package.sh
.claude/: settings.local.json
TVTestAndroid/: .gitignore  CMakeLists.txt  main.cpp
TVTestAndroid/.claude/: settings.local.json
TVTestAndroid/resources/: channels.json
TVTestAndroid/src/media/: DirectStreamPlayer.cpp  DirectStreamPlayer.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FfmpegPipePlayer.cpp  FfmpegPipePlayer.h  LibVLCPlayer.cpp  LibVLCPlayer.h  TsBuffer.h  TsStreamDevice.cpp  TsStreamDevice.h
TVTestAndroid/src/network/: BonDriverNetwork.cpp  BonDriverNetwork.h  HighPerformanceStreamProcessor.cpp  HighPerformanceStreamProcessor.h  TSStreamingServer.cpp  TSStreamingServer.h  VLCStreamingPlayer.cpp  VLCStreamingPlayer.h
TVTestAndroid/src/ui/: FFmpegVideoWidget.cpp  FFmpegVideoWidget.h  MainWindow.cpp  MainWindow.h
TVTestAndroid/src/utils/: Logger.cpp  Logger.h
android_tvtest/: CMakeLists.txt
android_tvtest/src/: main.cpp  mainwindow.cpp  mainwindow.h
android_tvtest/src/core/: CoreEngine.cpp  CoreEngine.h
android_tvtest/src/database/: EPGDatabase.cpp  EPGDatabase.h
android_tvtest/src/network/: NetworkManager.cpp  NetworkManager.h
android_tvtest/src/utils/: Logger.cpp  Logger.h
android_tvtest/ui/: channellist.ui  mainwindow.ui
doc/: TVTest.txt
sdk/: TVTestSDK.txt
sdk/Samples/: Samples.sln
sdk/Samples/AutoSnapShot/: AutoSnapShot.cpp  AutoSnapShot.rc  AutoSnapShot.vcxproj  resource.h
sdk/Samples/DiskRelay/: DiskRelay.cpp  DiskRelay.rc  DiskRelay.txt  DiskRelay.vcxproj  resource.h
sdk/Samples/Equalizer/: Equalizer.cpp  Equalizer.rc  Equalizer.vcxproj  Equalizer.vcxproj.filters  resource.h
sdk/Samples/GamePad/: GamePad.cpp  GamePad.rc  GamePad.vcxproj  resource.h
sdk/Samples/HDUSRemocon/: HDUSRemocon.cpp  HDUSRemocon.rc  HDUSRemocon.vcxproj  HDUSRemocon_KeyHook.c  HDUSRemocon_KeyHook.h  HDUSRemocon_KeyHook.vcxproj  resource.h
sdk/Samples/LogoList/: LogoList.cpp  LogoList.vcxproj
sdk/Samples/MemoryCapture/: ITVTestVideoDecoder.h  Image.cpp  Image.h  ImageCodec.cpp  ImageCodec.h  MemoryCapture.cpp  MemoryCapture.rc  MemoryCapture.txt  MemoryCapture.vcxproj  MemoryCapture.vcxproj.filters  PreviewWindow.cpp  PreviewWindow.h  SeekBar.cpp  SeekBar.h  Toolbar.cpp  Toolbar.h  VideoDecoder.cpp  VideoDecoder.h  resource.h
sdk/Samples/MiniProgramGuide/: MiniProgramGuide.cpp  MiniProgramGuide.vcxproj
sdk/Samples/PacketCounter/: PacketCounter.cpp  PacketCounter.vcxproj
sdk/Samples/SignalGraph/: SignalGraph.cpp  SignalGraph.rc  SignalGraph.vcxproj  SignalGraph.vcxproj.filters
sdk/Samples/SleepTimer/: SleepTimer.cpp  SleepTimer.rc  SleepTimer.vcxproj  resource.h
sdk/Samples/SpectrumAnalyzer/: SpectrumAnalyzer.cpp  SpectrumAnalyzer.rc  SpectrumAnalyzer.vcxproj  SpectrumAnalyzer.vcxproj.filters  resource.h
sdk/Samples/TSInfo/: TSInfo.cpp  TSInfo.rc  TSInfo.vcxproj  resource.h
sdk/Samples/TunerPanel/: TunerPanel.cpp  TunerPanel.rc  TunerPanel.vcxproj  TunerPanel.vcxproj.filters  resource.h
src/: AboutDialog.cpp  AboutDialog.h  Accelerator.cpp  Accelerator.h  Aero.cpp  Aero.h  AppCommand.cpp  AppCommand.h  AppCore.cpp  AppCore.h  AppEvent.cpp  AppEvent.h  AppMain.cpp  AppMain.h  AppUtil.cpp  AppUtil.h  AudioManager.cpp  AudioManager.h  AudioOptions.cpp  AudioOptions.h  BasicWindow.cpp  BasicWindow.h  CaptionPanel.cpp  CaptionPanel.h  Capture.cpp  Capture.h  CaptureOptions.cpp  CaptureOptions.h  ChannelDisplay.cpp  ChannelDisplay.h  ChannelHistory.cpp  ChannelHistory.h  ChannelInput.cpp  ChannelInput.h  ChannelList.cpp  ChannelList.h  ChannelManager.cpp  ChannelManager.h  ChannelPanel.cpp  ChannelPanel.h  (+253 more)
src/Common/: DebugDef.h
src/Help/: Help.vcxproj  HelpID.h  MakeHelp.bat  TVTest.hhc  TVTest.hhk  TVTest.hhp  appendix.html  commandline.html  default.css  first.html  hint.html  howtouse.html  index.html  initialsettings.html  install.html  menu.html  options.html  panel.html  record.html  sidebar.html  statusbar.html
src/Help/appendix/: channelfile.html  decoder.html  logo.html  stylefile.html  tips.html
src/Help/options/: accelerator.html  audio.html  capture.html  channelinput.html  channelscan.html  channelscan_details.html  colorscheme.html  controller.html  driver.html  epg.html  general.html  log.html  menu.html  networkremocon.html  notificationbar.html  operation.html  osd.html  panel.html  playback.html  plugin.html  programguide.html  programguidetool.html  record.html  sidebar.html  statusbar.html  tsprocessor.html  tsprocessor_tunermap.html  video.html  view.html
src/Help/programguide/: favorites.html  menu.html  programguide.html  search.html
src/Resource/: TVTest.exe.manifest
src/TVTest_Image/: Codec_BMP.cpp  Codec_BMP.h  Codec_JPEG.cpp  Codec_JPEG.h  Codec_PNG.cpp  Codec_PNG.h  ImageLib.cpp  ImageLib.h  ImageLib.vcxproj  ImageLib.vcxproj.filters  ImageUtil.cpp  ImageUtil.h  TVTest_Image.cpp  TVTest_Image.h  TVTest_Image.vcxproj  TVTest_Image.vcxproj.filters
src/TVTest_Image/libjpeg/: libjpeg.vcxproj  libjpeg.vcxproj.filters
src/TVTest_Image/libpng/: libpng.vcxproj  libpng.vcxproj.filters
src/TVTest_Image/zlib/: zlib.vcxproj  zlib.vcxproj.filters
